# AI-Notebooklm

./: .dockerignore  .gitignore  Dockerfile  README.md  build_notion_tower.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.planning/: ISSUES.md  PROJECT.md  ROADMAP.md  STATE.md  config.json  notion_hub.json  v4-2-t3-frozen-pack.md  v4_3_scope_draft.md
aero_prop_logic_harness/: __init__.py  __main__.py  cli.py  path_constants.py
deploy/: docker-compose.staging.yml  staging.env.example
docs/: ARCHITECTURE_OVERVIEW.md  ARTIFACT_MODEL.md  ASSUMPTIONS_AND_BOUNDARIES.md  AUDIT_LOG_GUIDE.md  FK_ENFORCEMENT_GUIDE.md  GOVERNANCE_LOG.md  GSD_AUTOMATION_COCKPIT.md  HANDOFF_PHASE0_PHASE1.md  ID_AND_NAMING_CONVENTIONS.md  METRICS_GUIDE.md  MILESTONE_BOARD.md  MODEL_ROUTING_POLICY.md  NOTION_CONTROL_HUB.md  PHASE0_PHASE1_FREEZE_CHECKLIST.md  PHASE2A_IMPLEMENTATION_NOTES.md  PHASE2B_ARCHITECTURE_PLAN.md  PHASE2B_IMPLEMENTATION_NOTES.md  PHASE2C_IMPLEMENTATION_NOTES.md  PHASE2C_REVIEW_REPORT.md  PHASE2_ARCHITECTURE_PLAN.md  PHASE3_2_REVIEW_REPORT.md  PHASE3_3_EXECUTION_REPORT.md  PHASE3_ARCHITECTURE_PLAN.md  PHASE3_IMPLEMENTATION_NOTES.md  PHASE4_IMPLEMENTATION_NOTES.md  PHASE5_IMPLEMENTATION_NOTES.md  PHASE5_REVIEW_REPORT.md  PHASE5_STATUS_REPORT.md  PHASE6_ARCHITECTURE_PLAN.md  PHASE6_FIX_NOTES.md  PHASE6_FIX_REVIEW_INPUT.md  PHASE6_FIX_REVIEW_REPORT.md  PHASE6_IMPLEMENTATION_NOTES.md  PHASE6_PLAN_REVIEW_REPORT.md  PHASE6_REREVIEW_INPUT.md  PHASE6_REVIEW_INPUT.md  PHASE6_REVIEW_REPORT.md  PHASE7_EXEC_INPUT.md  PHASE7_FORMAL_POPULATION_PLAN.md  (+77 more)
(+357 files in other folders)
